Arreglamos errores de ortografia: PC-OFICINA

--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -12,7 +12,7 @@
     <h2 class="servicios__title"> EXCAVACIONES </h2>
 
     <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> A cielo abierto </p>
-    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> En zangas </p>
+    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> En zanjas </p>
     <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Con voladuras </p>
     <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> De zapata </p>
 
