--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -23,7 +23,7 @@
       </div>
 
       <div>
-        <p-card header="Especialistas la Materia" subheader="Maestría en Ingeniería"
+        <p-card header="Especialistas en la Materia" subheader="Maestría en Ingeniería"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
             <span class="material-symbols-outlined">
@@ -101,7 +101,7 @@
             Nos dedicamos a <strong> brindar soluciones integrales </strong> en el ámbito de la ingeniería y
             construcción para obras privadas
             e industriales. Nuestro compromiso es <strong> ofrecer servicios de vanguardia </strong> que permitan a
-            nustros clientes tomar
+            nuestros clientes tomar
             decisiones fundamentales <strong> afianzando su seguridad y minimizando el impacto ambiental. </strong>
           </p>
         </div>
@@ -116,9 +116,9 @@
 
         <div class="nosotros__content-2__section__1__text-3">
           <p>
-            Como lideres del mercado, nos comprometemos a acompañar a nustros clientes en la gestión de sus activos con
+            Como lideres del mercado, nos comprometemos a acompañar a nuestros clientes en la gestión de sus activos con
             un enfoque de calidad
-            y sustentable.
+            y sustentabilidad.
           </p>
         </div>
 
