--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -8,6 +8,8 @@
   p {
     padding-bottom: 3rem;
     letter-spacing: 0.08rem;
+    line-height: 1.3rem;
+    font-size: 1.2rem;
   }
 
   &__content__1 {
@@ -28,6 +30,10 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 2rem;
+      label {
+        font-weight: bold;
+        font-size: 1.2rem;
+      }
 
       p-radioButton {
         margin-right: 0.5rem;
@@ -37,7 +43,7 @@
     &__form {
       text-align: center;
       button {
-        font-size: 1.1rem;
+        font-size: 1.3rem;
         width: 12%;
         padding: 0.625rem;
         border: none;
@@ -46,6 +52,8 @@
         color: white;
         cursor: pointer;
         transition: background-color 0.3s;
+        font-family: kanit-light;
+
 
         &:hover {
           background-color: #05a4d4; // Cambia el color de fondo del botón al pasar el ratón
@@ -69,6 +77,7 @@
       input::placeholder,
       textarea::placeholder {
         color: white;
+        font-family: kanit-light;
       }
       margin-bottom: 5rem;
     }
