seguimos actualizando a nivel general: PC-OFICINA

--- a/src/app/client/pages/contacto/contacto.component.html
+++ b/src/app/client/pages/contacto/contacto.component.html
@@ -2,7 +2,7 @@
 
 <div class="contacto animate__animated animate__fadeIn content">
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
-  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Formulario de Contacto </h2>
+  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Formulario de contacto </h2>
 
   <p>
     <strong>¡Gracias por tu interés!</strong> Estamos entusiasmados por conocer <br> como podemos <strong>colaborar con tu próximo proyecto.</strong>
