--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -6,6 +6,7 @@
   text-align: center;
   flex-wrap: wrap;
   p {
+    margin-top: -2rem;
     padding-bottom: 3rem;
     letter-spacing: 0.08rem;
     line-height: 1.3rem;
