--- a/src/styles.scss
+++ b/src/styles.scss
@@ -168,7 +168,7 @@ h1 {
 .vector {
   display: flex;
   margin-left: auto;
-  width: 11rem;
+  width: 13rem;
   height: auto;
 }
 
@@ -259,7 +259,7 @@ h1 {
   width: 100%;
   z-index: 1000;
   background-color: var(--color-primary) ;
-  color: #FFC107;
+  // color: #FFC107;
   font-size: 1.3rem;
   height: 6.5rem;
   border-radius: 0;
@@ -282,6 +282,8 @@ h1 {
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
     color: white;
+    font-family: kanit-light;
+    font-size: 1.4rem;
 
   }
 
