Sacamos mayuscula de los titulos: PC-OFICINA

--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -3,7 +3,7 @@
 
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
-  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Nuestros Proyectos </h2>
+  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Nuestros proyectos </h2>
 
   <div class="botones">
     <button class="sub-title-proyectos" routerLink="/proyectos/actuales"> Actuales </button>
