--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -2,7 +2,7 @@
 <div class="servicios content">
   <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
 
-  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Servicios y Actividades </h2>
+  <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Servicios y actividades </h2>
 
   <div class="servicios__content servicios__content--destacado">
 
