--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -3,7 +3,7 @@
 
   <div class="nosotros__content-1">
 
-    <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué Elegirnos? </h2>
+    <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> ¿Por qué elegirnos? </h2>
 
     <div class="nosotros__content-1__cards">
 
