Seguimos actualizando: PC-OFICINA

--- a/src/app/client/components/card-animated/card-animated.component.scss
+++ b/src/app/client/components/card-animated/card-animated.component.scss
@@ -1,6 +1,6 @@
 .e-card {
   margin: 100px auto;
-  background: var(--color-primary);
+  background: #1cbedb;
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
   border-radius: 1rem;
@@ -16,7 +16,7 @@
   top: 0;
   margin-left: -50%;
   margin-top: -70%;
-  background: linear-gradient(744deg,var(--color-primary),var(--color-secondary) 60%, var(--color-secondary) );
+  background: linear-gradient(744deg,#0076b4,#3fd4f5 60%, #0076b4 );
 }
 
 .icon {
