--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -101,7 +101,7 @@
       transform: translateY(-50%);
       width: 100%;
       height: 10rem;
-      background-color: var(--color-primary-light);
+      background-color: var(--color-primary);
       z-index: -1;
   }
   }
