--- a/src/styles.scss
+++ b/src/styles.scss
@@ -277,7 +277,7 @@ h1 {
   }
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
-    color: #BFC7A2;
+    color: #3fd4f5;
   }
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
@@ -294,7 +294,7 @@ h1 {
   // }
 
   .p-menuitem-link-active .p-menuitem-text {
-    color: #FEBF07 !important;
+    color: #fec007ee !important;
   }
 
 }
