--- a/src/app/client/components/card-animated/card-animated.component.scss
+++ b/src/app/client/components/card-animated/card-animated.component.scss
@@ -29,15 +29,14 @@
   text-align: center;
   font-size: 1.1em;
   position: absolute;
-  top: 2.6em;
   left: 0;
   right: 0;
   color: rgb(255, 255, 255);
+  font-family: kanit-light;
   font-weight: 600;
 }
 
 .name {
-  font-size: 14px;
   font-weight: 100;
   position: relative;
   top: 1em;
