--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -11,10 +11,10 @@
   <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
     <h2 class="servicios__title"> EXCAVACIONES </h2>
 
-    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> A cielo abierto </p>
-    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> En zanjas </p>
-    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Con voladuras </p>
-    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> De zapata </p>
+    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> A cielo abierto </p>
+    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> En zanjas </p>
+    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Con voladuras </p>
+    <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> De zapata </p>
 
   </div>
 
@@ -25,10 +25,10 @@
     <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info" >
       <h2 class="servicios__title"> FUNDACIONES </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Superficiales o directas </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Profundas o por pozos </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Indirectas o por pilotes </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Hidráulicas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Superficiales o directas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Profundas o por pozos </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Indirectas o por pilotes </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Hidráulicas </p>
 
     </div>
 
@@ -43,10 +43,10 @@
     <div data-aos="fade-left"  data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> HORMIGÓN ARMADO </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Convencional </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Pretensado </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Con fibras </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Proyectado </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Convencional </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Pretensado </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Con fibras </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Proyectado </p>
 
     </div>
 
@@ -58,10 +58,10 @@
     <div data-aos="fade-right" data-aos-duration="1000">
       <h2 class="servicios__title"> CAMINOS </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Carreteras </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Autopistas </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Rurales </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Vecinales </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Carreteras </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Autopistas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Rurales </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Vecinales </p>
 
     </div>
 
@@ -78,10 +78,10 @@
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> DESAGUES </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Alcantarillas </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Drenajes Pluviales </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Sistemas de bombeo </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Tratamiento de aguas residuales </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Alcantarillas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Drenajes Pluviales </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Sistemas de bombeo </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Tratamiento de aguas residuales </p>
 
     </div>
 
@@ -93,10 +93,10 @@
     <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> INGENIERÍA BÁSICA Y DE DETALLE </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Viabilidad del proyecto </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Alternativas y estimación de costos </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Desarrollo de planos </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Especificaciones técnicas definitivas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Viabilidad del proyecto </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Alternativas y estimación de costos </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Desarrollo de planos </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Especificaciones técnicas definitivas </p>
 
     </div>
 
@@ -111,10 +111,10 @@
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS INDUSTRIALES </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Plantas de producción </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Almacenes industriales </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Centros logísticos </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Instalaciones energéticas </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Plantas de producción </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Almacenes industriales </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Centros logísticos </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #3fd4f5; font-weight: bold;"></i> Instalaciones energéticas </p>
 
     </div>
 
@@ -126,10 +126,10 @@
     <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS DE ARQUITECTURA </h2>
 
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Residencial </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Comercial </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Industrial </p>
-      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #589CE0; font-weight: bold;"></i> Institucional </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Residencial </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1000" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Comercial </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="800" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Industrial </p>
+      <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="600" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Institucional </p>
 
     </div>
 
