Todo actualizado por el momento: PC-OFICINA

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -196,7 +196,8 @@
   </div>
 
   <div class="nosotros nosotros__contact">
-    <p class="title_primary">Explora de qué manera podemos colaborar en la ejecución <br> y mejora de tus proyectos de infraestructura</p>
+    <p class="nosotros__contact__subtitle_1"> Explora de que manera podemos colaborar en la ejecución </p>
+    <p class="nosotros__contact__subtitle_2 last-content"> y mejora de tus proyectos de infraestructura </p>
     <button class="last-content" data-aos="flip-up" data-aos-duration="3000" routerLink="/contacto">Contacto</button>
   </div>
 
