desactive el despliegue del primer elemento del acordeon en el apartado de nosotros: PC-OFICINA

--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -149,7 +149,7 @@
 
     <div class="nosotros__content-3__accordion container">
 
-      <p-accordion [activeIndex]="0">
+      <p-accordion>
         <p-accordionTab header="¿Cuál es la historia de Basamento SRL?">
           <p>
             Basamento SRL fue fundada en el año 2005 con la visión de proporcionar servicios de construcción de alta
