--- a/src/app/client/components/button-info-card/button-info-card.component.scss
+++ b/src/app/client/components/button-info-card/button-info-card.component.scss
@@ -1,8 +1,8 @@
 .button {
-  height: 50px;
-  width: 150px;
+  height: 3.125rem;
+  width: 9.375rem;
   border: none;
-  border-radius: 10px;
+  border-radius: 0.625rem;
   cursor: pointer;
   position: relative;
   overflow: hidden;
@@ -15,8 +15,8 @@
 
 .type1::after {
   content: "Nosotros";
-  height: 50px;
-  width: 150px;
+  height: 3.125rem;
+  width: 9.375rem;
   background-color: #033055;
   color: #ffff;
   position: absolute;
@@ -33,8 +33,8 @@
 
 .type1::before {
   content: "Sobre";
-  height: 50px;
-  width: 150px;
+  height: 3.125rem;
+  width: 9.375rem;
   background-color: #ffff;
   color: #033055;
   position: absolute;
