--- a/src/app/client/components/card-animated/card-animated.component.scss
+++ b/src/app/client/components/card-animated/card-animated.component.scss
@@ -1,5 +1,5 @@
 .e-card {
-  margin: 100px auto;
+  margin: 6.25rem auto;
   background: #1cbedb;
   box-shadow: 0px 8px 28px -9px rgba(0,0,0,0.45);
   position: relative;
@@ -9,8 +9,8 @@
 
 .wave {
   position: absolute;
-  width: 540px;
-  height: 700px;
+  width: 33.75rem;
+  height: 43.75rem;
   opacity: 0.6;
   left: 0;
   top: 0;
@@ -44,7 +44,7 @@
 
 .wave:nth-child(2),
 .wave:nth-child(3) {
-  top: 210px;
+  top: 13.125rem;
 }
 
 .playing .wave {
