--- a/src/app/client/components/loading/loading.component.scss
+++ b/src/app/client/components/loading/loading.component.scss
@@ -1,24 +1,20 @@
 .spinnerContainer {
-  // display: flex;
-  // justify-content: center;
-  // align-items: center;
-  // min-height: 100vh;
-  position: fixed; /* Para que el overlay cubra toda la pantalla */
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(255, 255, 255, 0.8); /* Color blanco semi-transparente */
+  background-color: rgba(255, 255, 255, 0.8);
   display: flex;
-  justify-content: center; /* Centrar horizontalmente */
-  align-items: center; /* Centrar verticalmente */
-  z-index: 9999; /* Asegura que esté por encima de otros elementos */
+  justify-content: center;
+  align-items: center;
+  z-index: 9999;
 }
 
 
 .spinner {
-  width: 56px;
-  height: 56px;
+  width: 3.5rem;
+  height: 3.5rem;
   display: grid;
   border: 4px solid #0000;
   border-radius: 50%;
@@ -37,7 +33,7 @@
 }
 
 .spinner::after {
-  margin: 8px;
+  margin: 0.5rem;
   animation-duration: 3s;
 }
 
@@ -51,11 +47,11 @@
   color: #4a4a4a;
   font-family: "Poppins",sans-serif;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 1.5625rem;
   -webkit-box-sizing: content-box;
   box-sizing: content-box;
-  height: 40px;
-  padding: 10px 10px;
+  height: 2.5rem;
+  padding: 0.625rem 0.625rem;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -69,7 +65,7 @@
 .word {
   display: block;
   height: 100%;
-  padding-left: 6px;
+  padding-left: 0.375rem;
   color: #0096C2;
   animation: cycle-words 5s infinite;
 }
