--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -57,7 +57,7 @@
 
 
         &:hover {
-          background-color: #05a4d4; // Cambia el color de fondo del botón al pasar el ratón
+          background-color: #05a4d4;
         }
       }
 
