--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -5,7 +5,7 @@ $transition-duration: 0.3s;
 .footer {
   background-color: $color-background;
   color: $color-text;
-  padding: 40px 0;
+  padding: 2.5rem 0;
   height: auto;
   bottom: 0;
   width: 100%;
@@ -60,7 +60,7 @@ $transition-duration: 0.3s;
 
 
   &__container {
-    max-width: 1200px;
+    max-width: 75rem;
     margin: 0 auto;
   }
 
