--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -1,60 +1,3 @@
-// .header {
-//   position: relative;
-//   width: 100%;
-//   height: 100vh;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   overflow: hidden;
-
-//   button {
-//     position: absolute;
-//     font-size: 1rem;
-//     top: 65%;
-//   }
-
-//   video {
-//     position: absolute;
-//     width: 100%;
-//     height: 100%;
-//     object-fit: cover;
-//     filter: blur(1px);
-//   }
-
-//   h1,
-//   h4 {
-//     position: absolute;
-//     z-index: 1;
-//     text-align: center;
-//     text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.3);
-//   }
-
-// .h1_title_1 {
-//   font-size: 5rem;
-//   letter-spacing: 0.3rem;
-//   top: 31%;
-//   transform: translateY(-50%);
-//   color:#ffff;
-//   text-shadow: 2px 2px 4px #000000;
-// }
-// .h1_title_2 {
-//   font-size: 6rem;
-//   letter-spacing: 0.3rem;
-//   top: 39%;
-//   transform: translateY(-50%);
-//   color:#ffff;
-//   text-shadow: 2px 2px 4px #000000;
-// }
-
-//   h4 {
-//     font-size: 2rem;
-//     top: calc(46% + 6rem);
-//     transform: translateY(-50%);
-//     color: #FEBF07;
-//     text-shadow: 2px 2px 4px #000000;
-//   }
-// }
-
 
 .header {
   position: relative;
@@ -109,8 +52,6 @@
 }
 
 
-
-
 // ESTILOS BOTON
 
 .btn-53,
@@ -153,7 +94,7 @@
 
 .btn-53 {
   border: 1px solid;
-  border-radius: 999px;
+  border-radius: 62.4375rem;
   box-sizing: border-box;
   font-weight: 900;
   overflow: hidden;
