--- a/src/app/client/pages/servicios/servicios.component.scss
+++ b/src/app/client/pages/servicios/servicios.component.scss
@@ -14,7 +14,10 @@ $color-background: #5ad8fe65;
   }
 
   &__info {
-    margin-top: 4rem;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
   }
 
   &__title {
@@ -26,6 +29,10 @@ $color-background: #5ad8fe65;
     font-size: 1.5rem;
     margin-bottom: 0.5rem;
   }
+
+
+
+
 }
 
 
