--- a/src/styles.scss
+++ b/src/styles.scss
@@ -56,13 +56,18 @@ html {
     font-size: 85%;
   }
 
-  @media screen and (max-width: 600px) {
-    font-size: 40%;
+  @media screen and (max-width: 1300px) {
+    font-size: 80%;
   }
 
-  @media screen and (max-width: 400px) {
-    font-size: 30%;
+  @media screen and (max-width: 1200px) {
+    font-size: 70%;
   }
+
+  @media screen and (max-width: 1100px) {
+    font-size: 60%;
+  }
+
 }
 
 body {
@@ -441,7 +446,7 @@ h1 {
     }
   }
 
-
+ 
   // ESTILOS DE SWALL-ALERT2
 
   // CONTACTO
