cambiamos el tamaño de las imagenes en servicios: PC-OFICINA

--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -6,7 +6,7 @@
 
   <div class="servicios__content servicios__content--destacado">
 
-  <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
+  <p-image width="420"  data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/excavaciones.jpg" alt="Image"></p-image>
 
   <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
     <h2 class="servicios__title"> EXCAVACIONES </h2>
@@ -32,13 +32,13 @@
 
     </div>
 
-      <p-image data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
+      <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/fundaciones.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image data-aos="fade-right"  data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-right"  data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/hormigon-armado.jpg" alt="Image"></p-image>
 
     <div data-aos="fade-left"  data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> HORMIGÓN ARMADO </h2>
@@ -66,14 +66,14 @@
     </div>
 
 
-    <p-image data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/caminos.jpg" alt="Image"></p-image>
 
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/desagues.jpg" alt="Image"></p-image>
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> DESAGUES </h2>
@@ -100,13 +100,13 @@
 
     </div>
 
-    <p-image data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/ingenieria-basica-detalle.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-industriales.jpg" alt="Image"></p-image>
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> OBRAS INDUSTRIALES </h2>
@@ -133,13 +133,13 @@
 
     </div>
 
-    <p-image data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-left" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/obras-arquitectura.jpg" alt="Image"></p-image>
 
   </div>
 
   <div class="servicios__content servicios__content--destacado">
 
-    <p-image data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
+    <p-image width="420" data-aos="fade-right" data-aos-duration="1000" class="servicios__image" src="assets/imagenes/servicios/mantenimiento.jpg" alt="Image"></p-image>
 
     <div data-aos="fade-left" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> MANTENIMIENTO </h2>
