--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -55,7 +55,7 @@
 
   <div  class="servicios__content servicios__content--normal">
 
-    <div data-aos="fade-right" data-aos-duration="1000">
+    <div data-aos="fade-right" data-aos-duration="1000" class="servicios__info">
       <h2 class="servicios__title"> CAMINOS </h2>
 
       <p data-aos="fade-down" data-aos-easing="linear" data-aos-duration="1200" class="servicios__description"> <i class="pi pi-check" style="font-size: 1rem; color: #F0BF16; font-weight: bold;"></i> Carreteras </p>
