--- a/src/app/client/shared/header/header.component.scss
+++ b/src/app/client/shared/header/header.component.scss
@@ -31,6 +31,10 @@
         @media screen and (max-width: 1700px) {
           font-size: 3.5rem;
         }
+
+        @media screen and (max-width: 1200px) {
+          font-size: 2.8rem;
+        }
     }
     &__title-2 {
           font-size: 5rem;
@@ -39,6 +43,9 @@
           text-shadow: 2px 2px 4px #000000;
           @media screen and (max-width: 1700px) {
             font-size: 4.5rem;
+          }
+          @media screen and (max-width: 1200px) {
+            font-size: 3.8rem;
           }
     }
     &__subtitle {
