--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -7,7 +7,7 @@
 
     <div class="nosotros__content-1__cards">
 
-      <div>
+      <div class="cards-responsive">
         <p-card header="Transparencia y Confianza" subheader="Comprometidos con la Excelencia"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
@@ -22,7 +22,7 @@
         </p-card>
       </div>
 
-      <div>
+      <div class="cards-responsive">
         <p-card header="Especialistas en la Materia" subheader="Maestría en Ingeniería"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
@@ -37,7 +37,7 @@
         </p-card>
       </div>
 
-      <div>
+      <div class="cards-responsive">
         <p-card header="Historial de éxito Demostrado" subheader="Logros Comprobados en Acción"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
@@ -52,7 +52,7 @@
         </p-card>
       </div>
 
-      <div>
+      <div class="cards-responsive">
         <p-card header="Compromiso Ambiental" subheader="Compromiso con el Medio Ambiente"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
@@ -67,7 +67,7 @@
         </p-card>
       </div>
 
-      <div>
+      <div class="cards-responsive">
         <p-card header="Innovación Tecnológica" subheader="Vanguardia Tecnológica"
           [style]="{width: '15.625rem', height: '30.9375rem', overflow: 'hidden'}">
           <ng-template pTemplate="header">
