--- a/src/app/client/pages/nosotros/nosotros.component.scss
+++ b/src/app/client/pages/nosotros/nosotros.component.scss
@@ -14,6 +14,11 @@
       align-items: center;
       flex-wrap: wrap;
 
+      @media screen and (max-width: 960px) {
+          display: flex;
+          flex-direction: column;
+      }
+
       span {
         display: flex;
         justify-content: center;
@@ -21,6 +26,7 @@
         font-size: 5rem;
         color: var(--color-secondary);
       }
+
     }
 
     margin-bottom: 12rem;
@@ -32,17 +38,28 @@
     display: flex;
     flex-direction: column;
 
+
     h2 {
       display: flex;
       flex-direction: row;
       justify-content: center;
       margin-bottom: 8rem;
+      @media screen and (max-width: 960px) {
+        margin: 0 auto;
+        margin-top: -8rem;
+        margin-bottom: 5rem;
+      }
     }
 
     &__section {
       display: flex;
       align-items: center;
       justify-content: space-between;
+
+      @media screen and (max-width: 960px) {
+        display: flex;
+        flex-direction: column;
+      }
 
       &__1 {
 
@@ -52,6 +69,12 @@
         text-align: left;
         line-height: 1.7rem;
         font-size: 1.5rem;
+
+        @media screen and (max-width: 960px) {
+          width: 75%;
+          text-align: justify;
+          font-size: 1.2rem;
+        }
 
         &__text-1, &__text-2 {
           margin-bottom: 3rem;
@@ -64,6 +87,9 @@
           font-weight: bold;
           text-align: center;
           background: linear-gradient(to right, var(--color-secondary), var(--color-secondary-light));
+          @media screen and (max-width: 960px) {
+            margin-bottom: 5rem;
+          }
         }
       }
       &__2 {
