--- a/src/styles.scss
+++ b/src/styles.scss
@@ -50,7 +50,7 @@ body, h1, h2, h3, h4, h5, h6, p, ul, ol {
 }
 
 html {
-  font-size: 95%;
+  font-size: 93%;
 
   @media screen and (max-width: 1600px) {
     font-size: 80%;
@@ -58,6 +58,21 @@ html {
 
   @media screen and (max-width: 1300px) {
     font-size: 70%;
+  }
+
+
+  @media screen and (max-width: 960px) {
+    font-size: 60%;
+
+    .cards-responsive .p-card {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 30rem !important;
+      margin: 0 auto;
+      margin-bottom: 5rem;
+    }
   }
 
 }
@@ -341,6 +356,10 @@ h1 {
     background-color: #39414e;
     transition: transform 0.5s ease;
     transform: scale(1.05);
+    @media screen and (max-width: 960px) {
+      transition: none;
+      transform: none;
+    }
   }
 
 
@@ -423,6 +442,8 @@ h1 {
   .p-scrolltop  {
     transition: background-color 0.3s, color 0.3s, border-color 0.3s;
     background-color: var(--color-secondary);
+    width: 3rem;
+    height: 3rem;
     opacity: 0.7 !important;
     border-radius: 15% !important;
     transition: opacity 0.4s !important;
