actualizacion responsive: PC

--- a/src/app/client/components/galeria-imagenes/galeria-imagenes.component.html
+++ b/src/app/client/components/galeria-imagenes/galeria-imagenes.component.html
@@ -1,4 +1,4 @@
-<div class="card proyectos__content__galeria">
+<div class="card">
   <p-galleria  [value]="imagenes" [(activeIndex)]="activeIndex" [numVisible]="5" [responsiveOptions]="responsiveOptions"
     [showThumbnails]="showThumbnails" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true" [circular]="true"
     [autoPlay]="false" [transitionInterval]="3000" [containerStyle]="{'width':'100%'}"
