--- a/src/styles.scss
+++ b/src/styles.scss
@@ -73,6 +73,7 @@ html {
       margin: 0 auto;
       margin-bottom: 5rem;
     }
+
   }
 
 }
@@ -365,6 +366,7 @@ h1 {
 
 // PROYECTOS
 
+
 .p-card-body {
   background-color: #0E0C0A;
 }
@@ -380,6 +382,11 @@ h1 {
                   flex-grow: 1;
                   justify-content: center;
                   align-items: center;
+                  @media screen and (max-width: 960px) {
+                    margin: 0 auto;
+                    width: 75%;
+                    height: auto;
+                  }
               }
           }
 
