--- a/src/styles.scss
+++ b/src/styles.scss
@@ -384,8 +384,13 @@ h1 {
                   align-items: center;
                   @media screen and (max-width: 960px) {
                     margin: 0 auto;
-                    width: 75%;
-                    height: auto;
+                    width: 60%;
+                    height: 60%;
+                  }
+                  @media screen and (max-width: 500px) {
+                    margin: 0 auto;
+                    width: 100%;
+                    height: 100%;
                   }
               }
           }
