--- a/src/app/client/components/galeria-imagenes/galeria-imagenes.component.html
+++ b/src/app/client/components/galeria-imagenes/galeria-imagenes.component.html
@@ -1,7 +1,7 @@
-<div class="card">
-  <p-galleria [value]="imagenes" [(activeIndex)]="activeIndex" [numVisible]="5" [responsiveOptions]="responsiveOptions"
+<div class="card" [class]="'imgs-' + indexProject">
+  <p-galleria [value]="imagenes" [(activeIndex)]="activeIndex"  [numVisible]="5" [responsiveOptions]="responsiveOptions"
     [showThumbnails]="showThumbnails" [showItemNavigators]="true" [showItemNavigatorsOnHover]="true" [circular]="true"
-    [autoPlay]="false" [transitionInterval]="3000" [containerStyle]="{'width':'100%'}"
+    [autoPlay]="false" [transitionInterval]="3000" [containerStyle]="{'width':'100%', 'height': '100%'}"
     [containerClass]="galleriaClass()">
 
     <ng-template pTemplate="item" let-item>
