agregamos algunos estilos de animated.css: PC-OFICINA

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -9,7 +9,7 @@
     <div class="home__content__info__primary">
 
       <section class="home__content__info__primary__section-1">
-        <h2 class="sub-title"> ¿Quiénes somos?</h2>
+        <h2 data-aos="zoom-in-up" class="sub-title"> ¿Quiénes somos?</h2>
       </section>
 
       <section class="home__content__info__primary__section-2">
