--- a/src/app/client/pages/nosotros/nosotros.component.html
+++ b/src/app/client/pages/nosotros/nosotros.component.html
@@ -1,5 +1,5 @@
 <div class="content nosotros animate__animated animate__fadeIn">
-  <img class="vector " src="../../../../assets/imagenes/home/vectores/onda.svg">
+  <img class="vector" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
   <div class="nosotros__content-1">
 
@@ -90,7 +90,7 @@
 
   <div class="nosotros__content-2 container">
 
-    <h2 class="sub-title"> Sobre Nosotros </h2>
+    <h2  data-aos="fade-right" class="sub-title"> Sobre Nosotros </h2>
 
     <section class="nosotros__content-2__section">
 
