--- a/src/app/client/pages/servicios/servicios.component.html
+++ b/src/app/client/pages/servicios/servicios.component.html
@@ -1,5 +1,5 @@
 
-<div class="servicios content">
+<div class="servicios content animate__animated animate__fadeIn">
   <img class="vector" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
   <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Servicios y actividades </h2>
