--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -31,9 +31,20 @@
       justify-content: space-between;
       align-items: center;
       margin-bottom: 2rem;
+      .radiobutton-div {
+        @media screen and (max-width: 900px) {
+          margin-bottom: 1rem;
+        }
+      }
+      @media screen and (max-width: 900px) {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+      }
       label {
         font-weight: bold;
         font-size: 1.2rem;
+
       }
 
       p-radioButton {
@@ -121,6 +132,14 @@
       margin-top: 5rem;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
       transition: box-shadow 0.3s;
+      @media screen and (max-width: 900px) {
+        width: 60rem;
+        height: 30rem;
+      }
+      @media screen and (max-width: 800px) {
+        width: 54rem;
+        height: 27rem;
+      }
     }
   }
 
