--- a/src/app/client/shared/footer/footer.component.html
+++ b/src/app/client/shared/footer/footer.component.html
@@ -3,7 +3,7 @@
     <div class="footer__content">
 
       <div class="footer__section footer__section--desarrollador">
-        <h2> <img src="../../../../assets/Logo_3.svg" alt="" height="50rem"></h2>
+        <h2> <img class="logo-footer" src="../../../../assets/Logo_3.svg" alt="" height="50rem"></h2>
          <p>Somos una empresa con más de 30 años </p>
          <p> de trayectoria en el rubro de la construcción, </p>
          <p> lo que nos convierte en líderes en el sector. </p>
