--- a/src/app/client/shared/footer/footer.component.scss
+++ b/src/app/client/shared/footer/footer.component.scss
@@ -41,9 +41,9 @@ $transition-duration: 0.3s;
 
       .footer__social-link {
         i {
-          font-size: 1.7rem;
+          font-size: 2.2rem;
         }
-        margin-right: 1rem;
+        margin-right: 2rem;
         color: #0096C2;
         transition: opacity 0.3s ease-in-out;
 
@@ -62,6 +62,12 @@ $transition-duration: 0.3s;
   &__container {
     max-width: 75rem;
     margin: 0 auto;
+    @media screen and (max-width: 800px) {
+      max-width: 65rem;
+    }
+    @media screen and (max-width: 700px) {
+      max-width: 55rem;
+    }
   }
 
   &__content {
