--- a/src/app/client/shared/navbar/navbar.component.scss
+++ b/src/app/client/shared/navbar/navbar.component.scss
@@ -14,6 +14,9 @@ input {
     width: 10rem;
     height: 1.5rem;
   }
+  @media screen and (max-width: 960px) {
+    display: none;
+  }
 }
 
 input::placeholder {
