--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -5168,7 +5168,7 @@
       position: absolute;
       display: none;
       padding: 0.5rem 0;
-      background: #2a323d;
+      background: var(--color-primary);
       border: 1px solid #3f4b5b;
       box-shadow: none;
       width: 100%;
