agregamos mas estilos de medias queries: PC-OFICINA

--- a/src/app/client/pages/home/home.component.html
+++ b/src/app/client/pages/home/home.component.html
@@ -2,13 +2,14 @@
 
 <div class="home animate__animated animate__fadeIn">
 
-  <img class="vector" src="../../../../assets/imagenes/home/vectores/onda.svg">
+  <img class="vector_home" src="../../../../assets/imagenes/home/vectores/onda.svg">
 
   <div class="home__content container">
 
     <div class="home__content__info__primary">
 
       <section class="home__content__info__primary__section-1">
+
         <h2 data-aos="zoom-in-up" class="sub-title"> ¿Quiénes somos?</h2>
       </section>
 
