--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,6 +154,22 @@ h1 {
   margin-left: auto;
   width: 13rem;
   height: auto;
+  
+  @media screen and (max-width: 960px) {
+  width: 8rem;
+  }
+}
+
+.vector_home {
+  display: flex;
+  margin-left: auto;
+  width: 13rem;
+  height: auto;
+
+  @media screen and (max-width: 960px) {
+  margin-top: 6.5rem;
+  width: 8rem;
+  }
 }
 
 .colored-line {
@@ -262,7 +278,6 @@ h1 {
 }
 
 .p-menubar {
-
   transition: height 0.4s ease;
   position: fixed;
   top: 0;
