--- a/src/styles.scss
+++ b/src/styles.scss
@@ -154,9 +154,10 @@ h1 {
   margin-left: auto;
   width: 13rem;
   height: auto;
-  
+
   @media screen and (max-width: 960px) {
-  width: 8rem;
+  margin-top: -6.5rem;
+  width: 10rem;
   }
 }
 
@@ -167,8 +168,8 @@ h1 {
   height: auto;
 
   @media screen and (max-width: 960px) {
-  margin-top: 6.5rem;
-  width: 8rem;
+  // margin-top: 6.5rem;
+  width: 10rem;
   }
 }
 
@@ -259,20 +260,19 @@ h1 {
     top: 100%;
     left: 0;
     z-index: 1;
-    height: 25rem;
+    height: 35rem;
   }
 
   .p-menubar .p-menubar-root-list > .p-menuitem > .p-menuitem-content .p-menuitem-link {
-    // padding: 3rem;
     margin-left: 1rem;
-    margin-top: 2.2rem;
+    margin-top: 4rem;
     -webkit-user-select: none;
     user-select: none;
 
 }
 
 .p-menubar .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
-  margin-right: 1rem;
+  margin-right: 2rem;
 }
 
 }
@@ -289,6 +289,8 @@ h1 {
   border-radius: 0;
 
   @media screen and (max-width: 960px) {
+
+    position: sticky;
 
     .p-menubar-button {
      position: absolute;
@@ -322,12 +324,13 @@ h1 {
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-icon {
     color: #3fd4f5;
+    font-size: 1.3rem;
   }
 
   .p-menuitem > .p-menuitem-content .p-menuitem-link .p-menuitem-text {
     color: white;
     font-family: kanit-light;
-    font-size: 1.4rem;
+    font-size: 1.7rem;
     transform-origin: center;
   }
 
