--- a/src/app/client/pages/contacto/contacto.component.scss
+++ b/src/app/client/pages/contacto/contacto.component.scss
@@ -49,6 +49,16 @@
 
       p-radioButton {
         margin-right: 0.5rem;
+        @media screen and (max-width: 1600px) {
+          margin-right: 0.2rem;
+        }
+        @media screen and (max-width: 1300px) {
+          margin-right: 0.1rem;
+        }
+
+        @media screen and (max-width: 960px) {
+          margin-right: -0.2rem;
+        }
       }
     }
 
@@ -56,7 +66,7 @@
       text-align: center;
       button {
         font-size: 1.3rem;
-        width: 12%;
+        width: 7rem;
         padding: 0.625rem;
         border: none;
         border-radius: 5px;
