--- a/src/assets/styles/theme.css
+++ b/src/assets/styles/theme.css
@@ -1594,11 +1594,29 @@
   .p-radiobutton .p-radiobutton-box {
     border: 3px solid #1CBEDB;
     background: white;
-    width: 20px;
-    height: 20px;
+    /* width: 18px;
+    height: 18px; */
+    width: 1.25rem;
+    height: 1.25rem;
     color: rgba(255, 255, 255, 0.87);
     border-radius: 50%;
     transition: background-color 0.15s, border-color 0.15s, box-shadow 0.15s;
+    @media screen and (max-width: 1600px) {
+      /* width: 15px;
+      height: 15px; */
+      margin-top: 0.08rem !important;
+    }
+
+    @media screen and (max-width: 1300px) {
+      margin-top: 0.32rem !important;
+
+    }
+
+    @media screen and (max-width: 960px) {
+      margin-top: 0.5rem !important;
+
+    }
+
   }
   .p-radiobutton .p-radiobutton-box:not(.p-disabled):not(.p-highlight):hover {
     border-color: #3FD4F5;
