--- a/src/app/client/pages/proyectos/proyectos.component.html
+++ b/src/app/client/pages/proyectos/proyectos.component.html
@@ -6,9 +6,9 @@
   <h2 class="title_primary" data-aos="zoom-out" data-aos-duration="1000"> Nuestros proyectos </h2>
 
   <div class="botones">
-    <button class="sub-title-proyectos" routerLink="/proyectos/actuales"> Actuales </button>
-    <button class="sub-title-proyectos" routerLink="/proyectos/previos"> Previos </button>
-    <button class="sub-title-proyectos" routerLink="/proyectos/legado"> Legado </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/actuales" routerLinkActive="active"> Actuales </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/previos" routerLinkActive="active"> Previos </button>
+    <button class="sub-title-proyectos" routerLink="/proyectos/legado" routerLinkActive="active"> Legado </button>
   </div>
 
   <div *ngIf="isCurrentRoute('/proyectos/actuales')" class="proyectos__categorias">
